--- a/reference/IS-SN-importexport.yaml
+++ b/reference/IS-SN-importexport.yaml
@@ -1893,6 +1893,49 @@ paths:
           description: 'Optional fuel station code. If not set, every fuelcoupons transactions of the specified supplier in the datetime range will be returned.'
       x-internal: false
     parameters: []
+  /cards/articles:
+    get:
+      summary: Your GET endpoint
+      tags: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CardArticles'
+              examples:
+                Example 1:
+                  value:
+                    peoduct_code: 0
+                    paroduct_name: string
+                    product_status: true
+                    family_product_code: 0
+                    family_description: string
+                    isOil: true
+        '400':
+          description: Bad Request
+      operationId: get-cards-articles
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties: {}
+          application/xml:
+            schema:
+              type: object
+              properties: {}
+      parameters:
+        - schema:
+            type: string
+          in: query
+          name: supplier_code
+        - schema:
+            type: string
+          in: query
+          name: pan
+    parameters: []
 components:
   schemas:
     CardInput:
@@ -3122,6 +3165,37 @@ components:
           x-stoplight:
             id: c8lt1yl4bs9g5
           description: Commission of recharge
+    CardArticles:
+      title: CardArticles
+      x-stoplight:
+        id: bxlpp8u4p1lmh
+      type: object
+      properties:
+        peoduct_code:
+          type: number
+          x-stoplight:
+            id: eneehgzw33sa8
+        paroduct_name:
+          type: string
+          x-stoplight:
+            id: 7un43a3r6wbip
+        product_status:
+          type: boolean
+          x-stoplight:
+            id: hogwmeiriqoav
+        family_product_code:
+          type: number
+          x-stoplight:
+            id: 941u7eb9grisz
+        family_description:
+          type: string
+          x-stoplight:
+            id: 08favdkz3ioj8
+        isOil:
+          type: boolean
+          x-stoplight:
+            id: hbp1g3k98gu9f
+      description: ''
   securitySchemes:
     Cognito:
       type: oauth2
